# graviola-linkml

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: publish-schema.yml
annotation-vocab/: .htaccess  graviola-annotations.yaml  mkdocs.yml
examples/: collective-mind-schema.yml  collective-mind.gra.side-schema.json  collective-mind.schema.json
src/graviola_linkml/: __init__.py  cli.py
src/graviola_linkml/generators/: json_schema.py  side_schema.py
tests/: test_json_schema_generator.py  test_sidecar_generator.py
tests/fixtures/: item_schema.yaml  item_schema_annotated.yaml
