[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graviola-linkml"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "linkml>=1.8,<2",
  "pyyaml>=6.0",
  "jinja2>=3.1",
  "typer>=0.12",
  "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.11",
  "mypy>=1.10",
]

[project.scripts]
graviola-linkml = "graviola_linkml.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/graviola_linkml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
